fixed header spacing

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
 }
 
 #portrait {
-    height: 350px;
+    width: 200px;
 }
 
 .gallery {
